--- a/array/index.html
+++ b/array/index.html
@@ -9,8 +9,14 @@
     <p id="demo"></p>
 
     <script>
-        let fruit = ["apple","ball","cat","dog","elephant"];
-        document.getElementById("demo").innerHTML = fruit;
+        // let fruit = ["apple","ball","cat","dog","elephant"];
+        // document.getElementById("demo").innerHTML = fruit;
+
+        // document.writeln(fruit[0]);
+
+        // You can also create an array, and then provide the elements:
+
+        
     </script>
 </body>
 </html>
