--- a/array/new-keyword-array.html
+++ b/array/new-keyword-array.html
@@ -7,14 +7,10 @@
 </head>
 <body>
     <script>
-        let apple = [1,3,4,5,6];
-        let banana = [""];
-
-        for (let i = 0; i < array.length; i++) {
-            banana = apple[i] * 2;
-            
-        }
-        console.log(banana);
+        // let demo = new Array("krishna","madhusudhan", "govindha");
+        // document.write(demo);
+        let demo = new Array("krishna","madhusudhan", "govindha");
+        document.write(typeof(demo[0]));
     </script>
 </body>
 </html>
