added file object learn

--- a/object/object.html
+++ b/object/object.html
@@ -21,7 +21,7 @@
 
 <body>
 
-    <p id="demo"></p>
+    <!-- <p id="demo"></p> -->
 
     <script>
         // First Method🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀
@@ -54,7 +54,7 @@
         // }
         // document.writeln(obj["My Education"]);
 
-        // 🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀 Object With Array  🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀
+        // 🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀 Object With Function  🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀
           let obj = {
             firstName: "krishna",
             lastName: "madhusudhan",
@@ -66,7 +66,7 @@
        document.writeln("krishna is best god")
         
        }
-       document.writeln(obj.greeting())
+       document.writeln(obj.greeting);
 
     </script>
 
