--- a/object/arrayInObeject.html
+++ b/object/arrayInObeject.html
@@ -43,8 +43,9 @@
             }
         ]
         // basic sysntax 
-        console.log(demo[1].firstname); 
-       console.log(Object.values (result));
+    //     console.log(demo[1].firstname); 
+    //    console.log(Object.values (result));
+    document.writeln(demo[1].firstname)
     </script>
 </body>
 </html>
