--- a/js essentail/condition/grade.html
+++ b/js essentail/condition/grade.html
@@ -9,15 +9,22 @@
     <p id="demo"></p>
 
     <script>
-        let apple = 20;
+    
+        let a = prompt("please enter any number");
+        let b = prompt("please enter any number");
+        let c = prompt("please enter any number");
+        let d = prompt("please enter any number");
+        let e = prompt("please enter any number");
+        let f = prompt("please enter any number");
+        let g = prompt("please enter any number");
         let grade;
 
-        if (apple >= 90) {
+        if (a >= 90) {
             document.getElementById("demo").innerHTML = grade = "A"
         }else if(apple >= 80){
             document.getElementById("demo").innerHTML = grade = "B"
 
-        }else if(apple >= 75){
+        }else if(b >= 75){
          document.getElementById("demo").innerHTML = grade = "C"
 
         }else if(apple >= 60){
