--- a/js essentail/array/forEach-array.html
+++ b/js essentail/array/forEach-array.html
@@ -6,12 +6,36 @@
     <title>Document</title>
 </head>
 <body>
+    <p id="demo"></p>
     <script>
-        let emp = ["john", "krishna", "alok", "rohit" ,"john", "krishna", "alok", "rohit","john", "krishna", "alok", "rohit","john", "krishna", "alok", "rohit"];
+        //🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀 DEMO 🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀
+
+        // let emp = ["john", "krishna", "alok", "rohit" ,"john", "krishna", "alok", "rohit","john", "krishna", "alok", "rohit","john", "krishna", "alok", "rohit"];
+        // emp.forEach((value,index) => {
+        //     document.writeln(`<mark> <br>${value} : ${index} </mark>`)
+        // });
+
+        //🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀 DEMO : 2 🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀
+        // let num = [2,4,6,8,10,12,14];
+
+        // num.forEach(myFunction)
+        // document.getElementById("demo").innerHTML = num;
+
+        // function myFunction(item , index , array) {
+        //     return array[index]  = item * 10;
+        // }
+
+        //🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀 DEMO : 3 🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀
+        // let sum = 5 
+        // let number = [5,5,5,5,5,6];
+        // number.forEach(myFunction);
+        // document.write(sum)
+
+        // function myFunction(item = 5) {
+        //    item += sum; 
+        // }    
         
-        emp.forEach((value,index) => {
-            document.writeln(`<h1> ${value} : ${index} </h1>`)
-        });
+     
     </script>
 </body>
 </html>
