--- a/js essentail/switch/static.html
+++ b/js essentail/switch/static.html
@@ -9,7 +9,7 @@
     <p id="demo"></p>
 
     <script>
-        // var game = "footballasd";
+        // var game = "football";
 
         // switch (game){
             
@@ -31,7 +31,7 @@
         //         break;
 
         //          default :
-        //         document.getElementById("demo").innerHTML = "Is it defalut value";
+        //         document.getElementById("demo").innerHTML = "Is it default value";
 
 
         // }
@@ -43,7 +43,7 @@
         // let grade;
 
         // switch(true){
-        //  case apple >= 90:
+        //  case apple >= 100:
         //     grade = "A"
         //     break;
 
@@ -69,37 +69,37 @@
         // document.getElementById("demo").innerHTML = "Your Grade is :" + grade;
 
         // 🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀
-        let apple = "august"
-        let month; 
+        // let apple = "august"
+        // let month; 
 
-        switch (apple){
-            case "octuber":
-            case "november":
-            case "december":
-            case "january":
-            case "":
-            month = "this is winter weather";
-            break;
+        // switch (apple){
+        //     case "octuber":
+        //     case "november":
+        //     case "december":
+        //     case "january":
+        //     case "":
+        //     month = "this is winter weather";
+        //     break;
 
-            case "february":
-            case "march":
-            case "april":
-            case "may":
-            case "june":
-            month = "this is summer weather";
-            break;
+        //     case "february":
+        //     case "march":
+        //     case "april":
+        //     case "may":
+        //     case "june":
+        //     month = "this is summer weather";
+        //     break;
 
-            case "july":
-            case "august":
-            case "setember":
-            case "octomer ":
-            month = "this is monsoon weather";
-            break;
+        //     case "july":
+        //     case "august":
+        //     case "setember":
+        //     case "octomer ":
+        //     month = "this is monsoon weather";
+        //     break;
 
-            default:
-                month = "This is Unknown activity"
-        }
-        document.getElementById("demo").innerHTML = "This is finel result" + month;
+        //     default:
+        //         month = "This is Unknown activity"
+        // }
+        // document.getElementById("demo").innerHTML = "This is finel result" + month;
     </script>
 </body>
 </html>
