--- a/js essentail/function/variable-with-function.html
+++ b/js essentail/function/variable-with-function.html
@@ -6,12 +6,32 @@
     <title>Document</title>
 </head>
 <body>
-    <p id="demo">THE VARIABLE WITH FUNCTIONS</p>
+    <!-- <p id="demo">THE VARIABLE WITH FUNCTIONS</p>
+    <p>KABHI KABHI VARIABLES FUNCTION KO EXPRESSION FUNCLTION BHI BOLA JATA HAI</p> -->
     <script>
-       let demo = function (x , y) {
-        document.write(x + y)
-       }
-       demo(5, 5)
+         //🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀 METHOD - 1 Variables(Expression) Function  🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀
+
+    //    let demo = function (x , y) {
+    //     document.write(x + y)
+    //    }
+    //    demo(5, 5)
+
+         //🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀 METHOD - 2 Variables(Expression) Function  🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀
+
+    //   document.writeln(add(5))
+    //   function add(num) {
+    //     return num + 1
+    //   }
+    //   humne yaha pe argument ko function ke user likha hai toh bhi function work kar rha hai. lekin kya hoga agar function ko kisi variable mai dal de toh vaha par bhi argument ko function ke uper print kar denge toh code run hoga ya error aayega isi ko niche bataya gaya hai.
+
+      console.log(add(5)); //ERROR SHOW KAREGA 
+      let add = function(num){
+        return num + 1
+      }
+    
+    //   
+
+
     </script>
 </body>
 </html>
