--- a/js essentail/function/arraow-funtion/arrow-funtion.html
+++ b/js essentail/function/arraow-funtion/arrow-funtion.html
@@ -7,13 +7,26 @@
 </head>
 <body>
     <script>
-        let one = (num1 , num2) => {
-          let sum;
-          sum = num1 + num2
-          return sum;
+    //     let one = (num1 , num2) => {
+    //       let sum;
+    //       sum = num1 + num2
+    //       return sum;
 
-        }
-       document.write(one(5,5)) 
+    //     }
+    //    document.write(one(5,5)) 
+
+         //🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀 METHOD : 2 🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀
+        //  let one = (num1 , num2) => num1 + num2;
+        //  document.writeln(one(6,5))
+
+        // //  output
+        // 11
+
+         //🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀 METHOD : 3 🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀🚀
+         let one = (num1 , num2) => (num1 + num2)
+         document.writeln(one(6,6))
+       
+        //  OUTPUT 12
     </script>
 </body>
 </html>
